# Haiti-nippes

./: PROJECT_DESCRIPTION.md  PROJECT_MANIFEST.md  PROJECT_STATUS.md  README.md  ROADMAP.md  STATUS_AND_ROADMAP.md  pyproject.toml  requirements.txt
bibliography/: BIBLIOGRAPHY_STATUS.md  references.bib
data/: README.md  maternal_access_inputs.csv
data/metadata/: commune_access_input_template.csv  drainage_chokepoints_starter.csv  drainage_chokepoints_template.csv  flood_exposure_zones_starter.csv  flood_exposure_zones_template.csv  road_disruptions_starter.csv  road_disruptions_template.csv
docs/: PROJECT_INTAKE.md  SOURCE_MANIFEST_TEMPLATE.md  abstract_eval_packet.json  abstract_ml_readiness.md  flood_road_mapping.md  gis_mapping_plan.md  gis_pipeline.md  gis_schema.md  lit_matrix_meshtastic_programming.md  map_outputs.md  maternal_access_method_note.md  maternal_health_framework.md  mesh_hardware_poc.md  mesh_packet_log_schema.md  mesh_programming_notes.md  module_one_topic_selection.md  runbook.md  source_registry.md  structured_abstract.md
examples/: mesh_cli_dry_run.py  mesh_packet_log_demo.py  mesh_training_checkin.py
scripts/: build_commune_access_index.py  build_flood_road_registers.py  build_map_readiness.py  build_maps.py  check_gis_readiness.py  run_gis_pipeline.py  smoke_test.py
src/haiti_nippes/: __init__.py  access_model.py  cli.py  commune_index.py  flood_road_index.py  flood_road_model.py  geography.py  gis_workflow.py  io.py  map_builder.py  map_config.py  map_readiness.py  maternal_access_index.py  maternal_health.py  maternal_io.py  pipeline.py  (+1 more)
tests/: test_geography.py  test_mesh_objects.py  test_scoring.py
(+13 files in other folders)
