[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haiti-nippes"
version = "0.1.0"
description = "GIS and access-analysis tools for the Haiti Nippes project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gis = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "networkx>=3.2",
    "matplotlib>=3.8",
]

[project.scripts]
build-commune-access-index = "scripts.build_commune_access_index:main"
build-flood-road-registers = "scripts.build_flood_road_registers:main"

[tool.setuptools.packages.find]
where = ["src"]
