[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haiti-nippes"
version = "0.1.0"
description = "GIS and access-analysis tools for the Haiti Nippes project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gis = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "networkx>=3.2",
    "matplotlib>=3.8",
]
mesh = [
    "meshtastic>=2.6",
]
test = [
    "pytest>=8.0",
]

[project.scripts]
build-commune-access-index = "haiti_nippes.cli:build_commune_access_index_cli"
build-flood-road-registers = "haiti_nippes.cli:build_flood_road_registers_cli"
run-gis-pipeline = "haiti_nippes.cli:run_gis_pipeline_cli"
build-maps = "haiti_nippes.cli:build_maps_cli"
build-map-readiness = "haiti_nippes.cli:build_map_readiness_cli"

[tool.setuptools.packages.find]
where = ["src"]
